# goya

./: :w  CMakeLists.txt  README.md
include/goya/: b_spline.hpp  camera.hpp  drawable.hpp  engine.hpp  events.hpp  mesh.hpp  mesh_loader.hpp  mesh_obj_data.hpp  meta.hpp  model.hpp  particles.hpp  primitives.hpp  shader.hpp  window.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: points.txt
shaders/: basic.fs  basic.vs  camera.fs  camera.vs  model.vs  particle.fs  particle.vs
src/: main.cxx
src/goya/: b_spline.cxx  camera.cxx  drawable.cxx  engine.cxx  events.cxx  mesh.cxx  mesh_loader.cxx  mesh_obj_data.cxx  model.cxx  particles.cxx  primitives.cxx  shader.cxx  window.cxx
